<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="43dp"
        android:fontFamily="@font/podkova_extrabold"
        android:text="@string/ServiceRecords"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/podkova"
        android:text="@string/ServiceRecord"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_recordButton"
        android:layout_width="206dp"
        android:layout_height="39dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_shape3"
        android:text="@string/Record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="331dp"
        android:layout_height="328dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="249dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/podkova_extrabold"
        android:text="@string/MyRecord"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_recordButton" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:fontFamily="@font/podkova"
        android:gravity="center"
        android:text="@string/Trouble"
        android:textColor="@color/ColorBut4"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>