<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="43dp"
        android:fontFamily="@font/podkova_extrabold"
        android:text="@string/ServiceRecords"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/podkova"
        android:text="@string/ServiceRecord"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_recordButton"
        android:layout_width="206dp"
        android:layout_height="39dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_shape3"
        android:text="@string/Record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="331dp"
        android:layout_height="328dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="249dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/podkova_extrabold"
        android:text="@string/MyRecord"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_recordButton" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:fontFamily="@font/podkova"
        android:gravity="center"
        android:text="@string/Trouble"
        android:textColor="@color/ColorBut4"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPersonName6"
        android:layout_width="453dp"
        android:layout_height="58dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/bottom_pan"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:ems="10"
        android:fontFamily="@font/podkova"
        android:foregroundTint="@color/white"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:text=""
        android:textColor="@color/ColorRect"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonName6"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonName6"
        app:srcCompat="@drawable/ic_home" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonName6"
        app:srcCompat="@drawable/ic_account_box" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonName6"
        app:srcCompat="@drawable/ic_room_ic" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonName6"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonName6"
        app:srcCompat="@drawable/ic_question_answer" />
</androidx.constraintlayout.widget.ConstraintLayout>