<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/podkova_extrabold"
        android:text="@string/ForgotPassword"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addRecordingCity"
        android:layout_width="347dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/input_backg"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:ems="10"
        android:fontFamily="@font/podkova"
        android:foregroundTint="@color/white"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:text="Введите электронную почту"
        android:textColor="@color/ColorRect"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRecover"
        android:layout_width="188dp"
        android:layout_height="46dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_shape2"
        android:onClick="OnMyClick"
        android:text="@string/RecoverButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecordingCity" />

    <TextView
        android:id="@+id/ButtonRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/podkova"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecover" />

    <EditText
        android:id="@+id/addRecordingName"
        android:layout_width="347dp"
        android:layout_height="51dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/input_backg"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:ems="10"
        android:fontFamily="@font/podkova"
        android:foregroundTint="@color/white"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:text="Введите четырёхзначный код"
        android:textColor="@color/ColorRect"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonRec" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/podkova"
        android:gravity="center"
        android:text="@string/TextUnderRecover"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecordingName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ContinueButton"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_shape"
        android:text="@string/ContinueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>