<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="561dp"
        android:background="@drawable/main_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/podkova"
            android:text="@string/Welcome"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <EditText
            android:id="@+id/email_enter"
            android:layout_width="347dp"
            android:layout_height="51dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:ems="10"
            android:fontFamily="@font/podkova"
            android:foregroundTint="@color/dopColor"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Welcome" />

        <EditText
            android:id="@+id/password_enter"
            android:layout_width="347dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:ems="10"
            android:fontFamily="@font/podkova"
            android:foregroundTint="@color/dopColor"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_enter" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/password_enter"
            app:layout_constraintEnd_toEndOf="@+id/password_enter"
            app:layout_constraintTop_toTopOf="@+id/password_enter"
            app:layout_constraintVertical_bias="0.592"
            app:srcCompat="@drawable/ic_eye_icon" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/podkova_extrabold"
            android:text="@string/ForgotPas"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_enter" />

        <Button
            android:id="@+id/button_forgot"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:text=" "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_enter"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_main"
            android:layout_width="229dp"
            android:layout_height="46dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/button_shape2"
            android:text="@string/ButtonMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Registration"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/podkova_extrabold"
        android:gravity="center"
        android:text="@string/Registration"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QReg" />

    <TextView
        android:id="@+id/QReg"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/podkova"
        android:gravity="center"
        android:text="@string/QuestionReg"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="136dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/podkova"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
