<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/podkova_extrabold"
        android:text="@string/Donejob"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/podkova"
        android:text="@string/Auto"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/podkova"
        android:text="@string/AutoInf"
        android:textColor="@color/ColorAuto"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="307dp"
        android:layout_height="321dp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="229dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ReturnProfile"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_shape5"
        android:text="Вернуться в профиль"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/addRecordingDate"
        android:layout_width="453dp"
        android:layout_height="58dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/bottom_pan"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:ems="10"
        android:fontFamily="@font/podkova"
        android:foregroundTint="@color/white"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:text=""
        android:textColor="@color/ColorRect"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReturnProfile" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/addRecordingDate"
        app:layout_constraintTop_toTopOf="@+id/addRecordingDate"
        app:srcCompat="@drawable/ic_home" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/addRecordingDate"
        app:srcCompat="@drawable/ic_account_box" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="@+id/addRecordingDate"
        app:srcCompat="@drawable/ic_room_ic" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/addRecordingDate"
        app:layout_constraintTop_toTopOf="@+id/addRecordingDate"
        app:srcCompat="@drawable/ic_question_answer" />
</androidx.constraintlayout.widget.ConstraintLayout>